[gd_scene load_steps=8 format=3 uid="uid://dcpoixea02w54"]

[ext_resource type="Texture2D" uid="uid://cgerdtbgwf56c" path="res://Imagens/fundo_menu.jpg" id="1_2a0k2"]
[ext_resource type="Script" path="res://Scripts/escolha_nivel.gd" id="1_xcwjy"]
[ext_resource type="Theme" uid="uid://c4ytkjk72k8w2" path="res://Tres/default_buttons.tres" id="2_4f6fe"]
[ext_resource type="Texture2D" uid="uid://by1balctgph62" path="res://Imagens/choose_level.png" id="3_j3ous"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_beun7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gomme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl72h"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xcwjy")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_2a0k2")
expand_mode = 2

[node name="exit_btn" type="Button" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 601.0
offset_right = 970.0
offset_bottom = 633.0
theme = ExtResource("2_4f6fe")
text = "Back To Menu"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 376.0
offset_top = 98.0
offset_right = 758.0
offset_bottom = 178.0
texture = ExtResource("3_j3ous")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 179.0
offset_top = 215.0
offset_right = -206.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="level_1_btn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme = ExtResource("2_4f6fe")
theme_override_font_sizes/font_size = 70
text = "1"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_beun7")

[node name="level_2_btn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme = ExtResource("2_4f6fe")
theme_override_font_sizes/font_size = 70
text = "2"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_gomme")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="level_3_btn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme = ExtResource("2_4f6fe")
theme_override_font_sizes/font_size = 70
text = "3
"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_fl72h")

[node name="level_4_btn" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme = ExtResource("2_4f6fe")
theme_override_font_sizes/font_size = 70
text = "4"

[connection signal="pressed" from="exit_btn" to="." method="_on_exit_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/level_1_btn" to="." method="_on_level_1_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/level_2_btn" to="." method="_on_level_2_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/level_3_btn" to="." method="_on_level_3_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/level_4_btn" to="." method="_on_level_4_btn_pressed"]
